syntax = "proto3";

package common;

option go_package = "concert-ticket-api/api/grpc/proto";

message PaginationMeta {
  int32 page = 1;
  int32 page_size = 2;
  int32 total_count = 3;
  int32 total_pages = 4;
}